# smn

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  LICENSE-COMMERCIAL.md  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.production.yml  docker-compose.yml  package-lock.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
alembic/: env.py
alembic/versions/: eac278d89172_initial_schema.py
compliance/: fedramp.yaml  hipaa.yaml  sox.yaml
docs/: api-reference.md  backup-dr.md  deployment.md  monitoring.md
examples/: 01_hello_agent.py  02_governed_agent.py  03_multi_agent.py
infra/: README.md
infra/aws/: main.tf  outputs.tf  variables.tf
infra/azure/: main.tf  outputs.tf  variables.tf
legal/: data-processing-agreement.md  privacy-policy.md  terms-of-service.md
marketplace/aws/: Dockerfile  marketplace-listing.json
marketplace/azure/: Dockerfile  marketplace-listing.json
marketplace/gcp/: Dockerfile  marketplace-listing.json
policies/: default.yaml  eu_ai_act.yaml  high_risk.yaml
sdks/python/: README.md  pyproject.toml
sdks/python/src/smn_client/: __init__.py  _client.py  _errors.py  _resources.py  _transport.py  _types.py
sdks/python/tests/: test_client.py
sdks/typescript/: README.md  package-lock.json  package.json  (+1 more)
site/: index.html  index.html.bak
studio/: README.md
tests/: conftest.py  test_agent.py  test_audit.py  test_auth.py  test_checkpoint.py  test_finops.py  test_guardrails.py  test_identity.py  test_integration.py  test_llm.py  test_mcp.py  test_memory_persistence.py  test_metering.py  test_middleware.py  test_orchestrator.py  test_policy.py  test_policy_conditions.py  test_rate_limit.py  test_runtime.py  test_security_hardening.py  test_streaming.py  test_studio_copilot.py  test_telemetry.py  test_tools.py
(+84 files in other folders)
