[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smn"
version = "0.1.0"
description = "Secure Multi-agent Network — Deploy, govern, and scale AI agents safely."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "litellm>=1.60",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "cryptography>=43.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.5",
]
production = [
    "asyncpg>=0.30",
    "psycopg2-binary>=2.9",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "stripe>=10.0",
    "alembic>=1.14",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]

[project.scripts]
smn = "smn.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/smn"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
